# params_manager_cpp

./: CMakeLists.txt  README.md  package.xml
cmake/: GenerateInitParameters.cmake
include/params_manager/: params_manager.hpp
include/params_manager_cpp/: params_manager.hpp  visibility_control.h
scripts/: generate_init_parameters.py
src/: paramsmanager.cpp
